# rpa-poc

./: .gitignore  AGENTS.md  README.md  docker-compose.yaml
.github/workflows/: electron-build.yml
db/init/: 001_init.sql
docs/: architecture.md  ashirobo-step-list-schema.md  ashirobo-step-list.md  db-schema.md  memo.md  sync-electron-python.md  workflow-build-agent.md
rpa-agent/: README.md  operation_manager.py  pyproject.toml  requirements.txt  rpa-catalog.py  rpa_agent.py  rpa_agent.spec  rpa_agent_windows_fix.py  rpa_operations.json  rpa_workflow.py  setup.bat  setup.sh  test_stdio.py
rpa-agent/operations/: app_screen.py  email.py  excel.py  file_folder.py  mouse.py  wait.py  web_browser.py
rpa-agent/schemas/: __init__.py  api.py  app_screen.py  base.py  branch.py  excel_csv.py  external_scenario.py  file_folder.py  keyboard.py  loop.py  mail.py  memory.py  mouse.py  scenario.py  special_app.py  spreadsheet.py  text_extract.py  wait_error.py  web_browser.py
rpa-backend/: .env.example  README.md  builder.py  config.py  dependencies.py  generated_step_list.json  main.py  models.py  prompts.py  pyproject.toml  requirements.txt  sample.py  tool_mapping.py
rpa-backend/router/: __init__.py  chat.py  messages.py  workflow_build.py  workflows.py
rpa-backend/schema/: __init__.py  base.py  basic_steps.py  branching_steps.py  excel_steps.py  file_steps.py  keyboard_steps.py  looping_steps.py  mouse_steps.py  step_descriptions.py  step_factory.py  step_tags.py  variable_steps.py  window_steps.py
rpa-backend/scripts/: generate_step_list.py  seed_step_embedding.py
rpa-backend/src/rpa_backend/: __init__.py
rpa-backend/utils/: __init__.py  db.py  llm.py  mcp.py
rpa-electron/: DISTRIBUTION.md  PORTABLE-DISTRIBUTION.md  README.md  WINDOWS-ENCODING-FIX.md  WINDOWS-SETUP.md  electron-builder.yml  index.html  package.json  pnpm-lock.yaml  rpa-client.js  start-windows-utf8.bat  start-windows-utf8.ps1  test-windows.bat  test-windows.ps1  tsconfig.electron.json  tsconfig.electron.tsbuildinfo  tsconfig.json  vite.config.ts  windows-fix.bat
rpa-electron/electron/main/: index.ts  rpa-bridge-portable.ts  rpa-bridge.ts  rpa-client-portable.ts  rpa-client-windows-fix.ts  rpa-client.ts
rpa-electron/electron/preload/: index.ts
rpa-electron/portable-dist/rpa-agent/: requirements.txt  run-agent.bat  run-agent.sh
rpa-electron/scripts/: dist-mac.mjs  dist-win.mjs
rpa-electron/src/: App.tsx  main.tsx
rpa-electron/src/components/: OperationsList.tsx  RPADebugInfo.tsx  RPADemo.tsx  WorkflowBuilder.tsx
rpa-electron/src/hooks/: use-rpa.ts
rpa-electron/src/lib/: rpa-client.d.ts  rpa-client.js  rpa-client.ts
rpa-front/: README.md  components.json  package-lock.json  package.json
rpa-mcp/: README.md  main.py  main_backup.py  requirements.txt  test_json_integration.py
workflow-samples/: 01_basic_app_control.json  02_file_operations.json  03_excel_automation.json  04_web_browser.json  05_mouse_keyboard.json  06_csv_processing.json
(+49 files in other folders)
