[project]
name = "rpa-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "torutakakura", email = "takakuratoru0@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "playwright>=1.55.0",
    "pydantic>=2.11.7",
    "uvicorn[standard]>=0.35.0",
]

[project.scripts]
rpa-backend = "rpa_backend:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
